<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/teamsFragment">

    <fragment
        android:id="@+id/teamsFragment"
        android:name="com.digijed.goplayer.ui.main.teams.TeamsFragment"
        android:label="@string/title_teams_menu"
        tools:layout="@layout/fragment_teams" />
    <fragment
        android:id="@+id/playersFragment"
        android:name="com.digijed.goplayer.ui.main.players.PlayersFragment"
        android:label="@string/title_players_menu"
        tools:layout="@layout/fragment_players" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.digijed.goplayer.ui.main.ProfileFragment"
        android:label="@string/title_profile_menu"
        tools:layout="@layout/fragment_profile" />

</navigation>